--- a/Manual/Atlantis.html
+++ b/Manual/Atlantis.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1">
-    <title>The Atlantis — Keep Talking and Nobody Explodes Module</title>
+    <title>Atlantis — Keep Talking and Nobody Explodes Module</title>
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
@@ -25,7 +25,7 @@
     }
     
     .page-bg-03 {
-            background-image: url("img/The Atlantis/page-bg-noise-03-dark.png");
+            background-image: url("img/Atlantis/page-bg-noise-03-dark.png");
     }
     .white {
             color: white;
@@ -43,11 +43,11 @@
         <div class="page page-bg-01">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">The Atlantis</span>
+                <span class="page-header-section-title">Atlantis</span>
             </div>
             <div class="page-content">
-                <img src="img/Component/The Atlantis.svg" class="diagram">
-                <h2>On the Subject of The Atlantis</h2>
+                <img src="img/Component/Atlantis.svg" class="diagram">
+                <h2>On the Subject of Atlantis</h2>
                 <p class="flavour-text">a</p>
                 <p>The module presents eight buttons arranged in a circle and a trident in the middle. Words made up of Greek letters are shown on these buttons.</p>
                 <p>All words could be Caesar shifted forward X times, where X is minimized, such that Y, the number of times the letter Alpha (α) appears across all the words, is maximized.</p>
@@ -60,7 +60,7 @@
         <div class="page page-bg-02">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title">The Atlantis</span>
+                <span class="page-header-section-title">Atlantis</span>
             </div>
             <div class="page-content">
                 <h2>Appendix A: Greek Letters</h2>
