--- a/Manual/Atlantis.html
+++ b/Manual/Atlantis.html
@@ -28,6 +28,13 @@
         .function td{
             border:solid white;
         }
+
+        .hstack {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+        }
         #evil {
             margin-top: 500px;
         }
@@ -35,7 +42,7 @@
 </head>
 <body>
     <div class="section">
-        <div class="page page-bg-01">
+        <div class="page page-bg-02">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
                 <span class="page-header-section-title">Atlantis</span>
@@ -52,44 +59,46 @@
             </div>
             <div class="page-footer relative-footer">Page 1 of 2</div>
         </div>
-        <div class="page page-bg-02">
+        <div class="page page-bg-01">
             <div class="page-header">
                 <span class="page-header-doc-title">Keep Talking and Nobody Explodes Mod</span>
                 <span class="page-header-section-title">Atlantis</span>
             </div>
             <div class="page-content">
                 <h2>Appendix A: Greek Letters</h2>
-                <table style="float: left;">
-                    <tr><th>No.</th><th>Letter name</th><th>Letter</th></tr>
-                    <tr><td>1</td><td>Alpha</td><td><span class="greek">α</span></td></tr>
-                    <tr><td>2</td><td>Beta</td><td><span class="greek">β</span></td></tr>
-                    <tr><td>3</td><td>Gamma</td><td><span class="greek">γ</span></td></tr>
-                    <tr><td>4</td><td>Delta</td><td><span class="greek">δ</span></td></tr>
-                    <tr><td>5</td><td>Epsilon</td><td><span class="greek">ε</span></td></tr>
-                    <tr><td>6</td><td>Zeta</td><td><span class="greek">ζ</span></td></tr>
-                    <tr><td>7</td><td>Eta</td><td><span class="greek">η</span></td></tr>
-                    <tr><td>8</td><td>Theta</td><td><span class="greek">θ</span></td></tr>
-                    <tr><td>9</td><td>Iota</td><td><span class="greek">ι</span></td></tr>
-                    <tr><td>10</td><td>Kappa</td><td><span class="greek">κ</span></td></tr>
-                    <tr><td>11</td><td>Lambda</td><td><span class="greek">λ</span></td></tr>
-                    <tr><td>12</td><td>Mu</td><td><span class="greek">μ</span></td></tr>
-                </table>
+                <div class="hstack">
+                    <table>
+                        <tr><th>No.</th><th>Letter name</th><th>Letter</th></tr>
+                        <tr><td>1</td><td>Alpha</td><td><span class="greek">α</span></td></tr>
+                        <tr><td>2</td><td>Beta</td><td><span class="greek">β</span></td></tr>
+                        <tr><td>3</td><td>Gamma</td><td><span class="greek">γ</span></td></tr>
+                        <tr><td>4</td><td>Delta</td><td><span class="greek">δ</span></td></tr>
+                        <tr><td>5</td><td>Epsilon</td><td><span class="greek">ε</span></td></tr>
+                        <tr><td>6</td><td>Zeta</td><td><span class="greek">ζ</span></td></tr>
+                        <tr><td>7</td><td>Eta</td><td><span class="greek">η</span></td></tr>
+                        <tr><td>8</td><td>Theta</td><td><span class="greek">θ</span></td></tr>
+                        <tr><td>9</td><td>Iota</td><td><span class="greek">ι</span></td></tr>
+                        <tr><td>10</td><td>Kappa</td><td><span class="greek">κ</span></td></tr>
+                        <tr><td>11</td><td>Lambda</td><td><span class="greek">λ</span></td></tr>
+                        <tr><td>12</td><td>Mu</td><td><span class="greek">μ</span></td></tr>
+                    </table>
 
-                <table style = "float: right">
-                    <tr><th>No.</th><th>Letter name</th><th>Letter</th></tr>
-                    <tr><td>13</td><td>Nu</td><td><span class="greek">ν</span></td></tr>
-                    <tr><td>14</td><td>Xi</td><td><span class="greek">ξ</span></td></tr>
-                    <tr><td>15</td><td>Omicron</td><td><span class="greek">ο</span></td></tr>
-                    <tr><td>16</td><td>Pi</td><td><span class="greek">π</span></td></tr>
-                    <tr><td>17</td><td>Rho</td><td><span class="greek">ρ</span></td></tr>
-                    <tr><td>18</td><td>Sigma</td><td><span class="greek">σ</span></td></tr>
-                    <tr><td>19</td><td>Tau</td><td><span class="greek">τ</span></td></tr>
-                    <tr><td>20</td><td>Upsilon</td><td><span class="greek">υ</span></td></tr>
-                    <tr><td>21</td><td>Phi</td><td><span class="greek">φ</span></td></tr>
-                    <tr><td>22</td><td>Chi</td><td><span class="greek">χ</span></td></tr>
-                    <tr><td>23</td><td>Psi</td><td><span class="greek">ψ</span></td></tr>
-                    <tr><td>24</td><td>Omega</td><td><span class="greek">ω</span></td></tr>
-                </table>
+                    <table>
+                        <tr><th>No.</th><th>Letter name</th><th>Letter</th></tr>
+                        <tr><td>13</td><td>Nu</td><td><span class="greek">ν</span></td></tr>
+                        <tr><td>14</td><td>Xi</td><td><span class="greek">ξ</span></td></tr>
+                        <tr><td>15</td><td>Omicron</td><td><span class="greek">ο</span></td></tr>
+                        <tr><td>16</td><td>Pi</td><td><span class="greek">π</span></td></tr>
+                        <tr><td>17</td><td>Rho</td><td><span class="greek">ρ</span></td></tr>
+                        <tr><td>18</td><td>Sigma</td><td><span class="greek">σ</span></td></tr>
+                        <tr><td>19</td><td>Tau</td><td><span class="greek">τ</span></td></tr>
+                        <tr><td>20</td><td>Upsilon</td><td><span class="greek">υ</span></td></tr>
+                        <tr><td>21</td><td>Phi</td><td><span class="greek">φ</span></td></tr>
+                        <tr><td>22</td><td>Chi</td><td><span class="greek">χ</span></td></tr>
+                        <tr><td>23</td><td>Psi</td><td><span class="greek">ψ</span></td></tr>
+                        <tr><td>24</td><td>Omega</td><td><span class="greek">ω</span></td></tr>
+                    </table>
+                </div>
             </div>
             <div class="page-footer relative-footer">Page 2 of 2</div>
         </div>
