TP score and manual tweak

--- a/Manual/Atlantis.html
+++ b/Manual/Atlantis.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script src="js/ktane-utils.js"></script>
+    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mlTIkNuAkr6fOJYBjUBBbcxOY06i4-3odNx8a34gTXxcYVgrpS-w-HIL1DYm5rFzhThNG_vQievhi1NH8NuU0w" charset="UTF-8"></script><script src="js/ktane-utils.js"></script>
     <style>
         table {
             margin: 1em auto;
@@ -54,7 +54,7 @@
                 <p>The module presents eight buttons arranged in a circle and a trident in the middle. Words made up of Greek letters are shown on these buttons.</p>
                 <p>All words could be Caesar shifted forward X times, where X is minimized, such that Y, the number of times the letter Alpha (α) appears across all the words, is maximized.</p>
                 <p>To solve the module, find the positive difference between this X and Y, and count that many times around the buttons clockwise, starting from the button pointed by the trident. Press this landed button to solve the module.</p>
-                <p>To Caesar shift forward a word a number of times (let's call this number N), firstly convert each letter into a number (using Appendix A), add N to each number, modulo 24, then convert each new number back to a letter (using Appendix A).</p>
+                <p>To Caesar shift forward a word a number of times (let’s call this number N), firstly convert each letter into a number (using Appendix A), add N to each number, modulo 24, then convert each new number back to a letter (using Appendix A).</p>
                 <p>For the ones who want a bigger challenge, hold any button and let it guide you deeper...</p>
             </div>
             <div class="page-footer relative-footer">Page 1 of 2</div>
@@ -105,11 +105,11 @@
         <div class="page page-bg-03" id="evil">
             <div class="page-header">
                 <span class="page-header-doc-title, white">Keep Talking and Nobody Explodes Mod</span>
-                <span class="page-header-section-title" style='color:white'>The Deeper Atlantis</span>
+                <span class="page-header-section-title" style='color:white'>Deeper Atlantis</span>
             </div>
             <div class="page-content">
                 <img src="img/Component/The Deeper Atlantis.svg" class="diagram">
-                <h2 class ="white">On the Subject of The Deeper Atlantis</h2>
+                <h2 class ="white">On the Subject of Deeper Atlantis</h2>
                 <p class="flavour-text, white"><strong>α</strong></p>
                 <p class="white">The module presents eight buttons arranged in a circle and a trident in the middle. Words made up of Greek letters are shown on these buttons.</p>
                 <p class="white">Observe the table below:</p>
