--- a/Manual/Atlantis.html
+++ b/Manual/Atlantis.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=mlTIkNuAkr6fOJYBjUBBbcxOY06i4-3odNx8a34gTXxcYVgrpS-w-HIL1DYm5rFzhThNG_vQievhi1NH8NuU0w" charset="UTF-8"></script><script src="js/ktane-utils.js"></script>
+    <script src="js/ktane-utils.js"></script>
     <style>
         table {
             margin: 1em auto;
